--- a/_posts/2020-04-22-git-basis.md
+++ b/_posts/2020-04-22-git-basis.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: Git 基础
-categories: git
+categories: Git
 description: Git 基础知识介绍
-keywords: git github
+keywords: Git Github
 ---
 
 Git 基础知识介绍
