--- a/_posts/2020-04-22-git-basis.md
+++ b/_posts/2020-04-22-git-basis.md
@@ -3,7 +3,7 @@ layout: post
 title: Git 基础
 categories: Git
 description: Git 基础知识介绍
-keywords: Git Github
+keywords: Git, Github
 ---
 
 Git 基础知识介绍
